--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,17 +6,91 @@
 
 /* Element selectors */
 body {
-	background-color: beige;
-	color: brown;
+	background-color: #fdf8f5;
+	color: #4f4846;
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 20px;
+	text-align: center;
+}
+
+header,
+footer {
+	border-bottom: 5px solid;
+}
+
+header {
+	height: 60px;
+	text-align: right;
+	border-color: #e8cebf;
+}
+
+ul {
+	padding: 20px 0;
+}
+
+li {
+	display: inline;
+	padding-right: 30px;
+}
+
+a {
+	text-decoration: none;
+	color: #fdf8f5;
+}
+
+footer {
+	height: 20px;
+	padding: 20px 0;
+	border-color: #4f4846;
+}
+
+section {
+	padding-bottom: 40px;
+}
+
+img {
+	display: block;
+	margin: 10px auto;
+}
+
+h3 {
+	padding: 40px 0 20px 0;
+}
+
+form {
+	border: 5px solid #d2b4a2;
+	border-radius: 20px;
+	width: 500px;
+	margin: 0 auto;
+	padding: 10px;
+}
+
+form div {
+	margin-top: 5px;
+}
+
+button {
+	display: block;
+	margin: 10px auto 5px auto;
+	background-color: #4f4846;
+	color: #fdf8f5;
+	padding: 5px 30px;
+	font-size: 12px;
+}
+
+input {
+	width: 300px;
+	padding: 5px 0 5px 10px;
 }
 
 /* Class selectors */
 .bg-green {
-	background-color: forestgreen;
-	color: beige;
+	background-color: #266150;
+	color: #fdf8f5;
 }
 
 /* ID selectors */
 #contact {
-	background-color: lightpink;
+	background-color: #e8cebf;
+	border-top: 5px solid #d2b4a2;
 }
